--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Servidor Web para alojar el proyecto  DX",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/alanrc/proyecto_EANT#readme",
   "dependencies": {
     "fs": "0.0.1-security",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "nodemon": "^1.19.1"
   }
 }
